--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-star-rating-input": "^8.0.1",
     "react-star-ratings": "^2.3.0",
